# optee_example_gmssl

./: .gitignore  CMakeLists.txt  README.md  build_host.sh  build_ta.sh  build_ta_lib.sh  gcc.sh
host/: main.c
prebuilt/optee-os/export-ta_arm64/host_include/: conf.cmake  conf.h  conf.mk
prebuilt/optee-os/export-ta_arm64/mk/: conf.mk  ta_dev_kit.mk
ta/: Android.mk  Makefile  gmssl_ta.c  sub.mk  user_ta_header_defines.h
ta/include/: gmssl_ta.h
ta/test/: aestest.c  base64test.c  func.c  func.h  sm3test.c  test.c  test.h  test_func.h
ta_lib/: Makefile  sub.mk
ta_lib/include/: calc_add.h  calc_sub.h
ta_lib/public/: calc.h
ta_lib/src/: calc.c  calc_add.c  calc_sub.c
